# ttrpgtui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix  yamlfmt.yaml
.config/: config.json5
.githooks/: pre-commit
.zed/: settings.json
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  creature.rs  dnd_beyond.rs  edit.rs  errors.rs  event.rs  input.rs  logging.rs  main.rs  storage.rs  tui.rs  ui.rs  update.rs
src/components/: encounter.rs  fps.rs  session_picker.rs  vim_textarea.rs
src/models/: creature.rs  edit.rs  input.rs  mod.rs
src/ui/: encounter.rs  encounter_input.rs  mod.rs  popup.rs
