[build-dependencies]
anyhow = "1.0.90"
vergen-gix = {version = "9.1.0", features = ["build", "cargo"]}

[dependencies]
better-panic = "0.3.0"
clap = {version = "4.5.20", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles"
]}
color-eyre = "0.6.3"
config = "0.14.0"
# Kept at 0.29 to match ratatui-textarea/ratatui's crossterm event types.
crossterm = {version = "0.29.0", features = ["serde", "event-stream"]}
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4.1"
ratatui = {version = "0.30.0", features = ["serde", "macros"]}
ratatui-textarea = "0.9.1"
serde = {version = "1.0.211", features = ["derive"]}
serde_json = "1.0.132"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = {version = "0.26.3", features = ["derive"]}
tokio = {version = "1.40.0", features = ["full"]}
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "serde"]}
undo = "0.52.0"

[package]
name = "ttrpgtui"
version = "0.1.0"
description = "TUI for tracking certain tabletop RPG things"
authors = ["bizmythy <andrew.p.council@gmail.com>"]
license = "MIT"
edition = "2024"
build = "build.rs"
repository = "https://github.com/bizmythy/ttrpgtui"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
